--- a/isdb-frontend/package.json
+++ b/isdb-frontend/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^12.0.6",
+    "html2pdf.js": "^0.10.3",
     "http-proxy-middleware": "^3.0.3",
     "lucide-react": "^0.424.0",
     "mammoth": "^1.9.0",
